[gd_scene load_steps=14 format=3 uid="uid://bxdqvxcd77h1f"]

[ext_resource type="Script" path="res://scripts/attackers/dungbeetle.gd" id="1_rusju"]
[ext_resource type="Texture2D" uid="uid://cegeicer568v2" path="res://assets/attacker/DUNG BEETLE/WALKING/BEETLE1.png" id="2_lj645"]
[ext_resource type="Texture2D" uid="uid://bw30mtrww2k4u" path="res://assets/attacker/DUNG BEETLE/ATTACK/BEETLEA1.png" id="2_ofqiu"]
[ext_resource type="Texture2D" uid="uid://ccxdmq5mdh5dm" path="res://assets/attacker/DUNG BEETLE/ATTACK/BEETLEA2.png" id="3_7g4yy"]
[ext_resource type="Texture2D" uid="uid://c2fdgpmogdluc" path="res://assets/attacker/DUNG BEETLE/WALKING/BEETLE2.png" id="3_th5u2"]
[ext_resource type="Texture2D" uid="uid://domxdvjdjq6f" path="res://assets/attacker/DUNG BEETLE/ATTACK/BEETLEA3.png" id="4_dykl3"]
[ext_resource type="Texture2D" uid="uid://yvu7llb8c7d" path="res://assets/attacker/DUNG BEETLE/ATTACK/BEETLEA4.png" id="5_q3qa0"]
[ext_resource type="Texture2D" uid="uid://csmxb7u3jaix0" path="res://assets/attacker/DUNG BEETLE/DEAD/BEETLED1.png" id="6_pd3l4"]
[ext_resource type="Texture2D" uid="uid://dr2ib22yiujio" path="res://assets/attacker/DUNG BEETLE/DEAD/BEETLED2.png" id="7_k2iky"]
[ext_resource type="Texture2D" uid="uid://dxckju73ty0jw" path="res://assets/attacker/DUNG BEETLE/DEAD/BEETLED3.png" id="8_i0fpe"]
[ext_resource type="Texture2D" uid="uid://dlqdrdhgpm63b" path="res://assets/attacker/DUNG BEETLE/DEAD/BEETLED4.png" id="9_geuvt"]

[sub_resource type="SpriteFrames" id="SpriteFrames_8ngby"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ofqiu")
}, {
"duration": 1.0,
"texture": ExtResource("3_7g4yy")
}, {
"duration": 1.0,
"texture": ExtResource("4_dykl3")
}, {
"duration": 1.0,
"texture": ExtResource("5_q3qa0")
}],
"loop": true,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_pd3l4")
}, {
"duration": 1.0,
"texture": ExtResource("7_k2iky")
}, {
"duration": 1.0,
"texture": ExtResource("8_i0fpe")
}, {
"duration": 1.0,
"texture": ExtResource("9_geuvt")
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_lj645")
}, {
"duration": 1.0,
"texture": ExtResource("3_th5u2")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8sk7w"]
size = Vector2(50, 50)

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_rusju")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(16, -8)
scale = Vector2(0.048, 0.048)
sprite_frames = SubResource("SpriteFrames_8ngby")
animation = &"Death"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8sk7w")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_8sk7w")
debug_color = Color(0.163598, 0.617001, 0.528005, 0.42)

[node name="Timer" type="Timer" parent="."]

[node name="animation_delay" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="animation_delay" to="." method="_on_animation_delay_timeout"]
